2006-11-26  muppet <scott@asofyet.org>

	* tools/gtypeinterface-h-files-to-c-file.pl: Rewrite and major
	improvements

2006-11-26  Philip Van Hoof <pvanhoof@gnome.org>

	* tools/gtypeinterface-h-files-to-c-file.pl: Initial implementation

2006-11-23  Philip Van Hoof <pvanhoof@gnome.org>

	* The mail-sending API, fine tuning

	* This is a major API change in libtinymail

2006-11-24  Sergio Villar Senin <svillar@igalia.com>
	* libtinymail-camel/tny-camel-folder.c: initilize a CamelException
	* libtinymail-camel/tny.camel-store-account.c: added a folder
	unsubscription before a folder delete

2006-11-23  Thomas Viehmann <tv@beamnet.de>

	* Improvements for the debian package

2006-11-23  Philip Van Hoof <pvanhoof@gnome.org>

	* Major fixes and refactoring for the rfc822 support
	* Reimplemented TnyGtkMsgWindow
	* Added a tny_msg_view_create_new_inline_viewer API

	* This was a major API change in libtinymailui & libtinymailui-gtk

2006-11-23  Sergio Villar Senin <svillar@igalia.com>
	* libtinymail-camel/tny-camel-folder.c: added support to rename
	folders
	* libtinymail-camel/tny-camel-store-account.c: refactored the
	subscriptions code
	* libtinymail-gnome-desktop/tny-gnome-account-store.c: removed a small
	leak

	* This was a major API change in libtinymail

2006-11-21  Sergio Villar Senin <svillar@igalia.com>
	* Fixed a bug when subscribing new folders
	* Added the signal "subscription_changed" to TnyStoreAccount
	* Added a query to TnyGtkAccountTreeModel
	* tinymail/tny-demoui-summary-view.c: now asks only for the
	subscribed folders

	* This was a major API change in libtinymailui-gtk

2006-11-21  Philip Van Hoof <pvanhoof@gnome.org>

	* Major changes in TnyMsg and TnyMimePart
	* First support for message/rfc822 messages
	* API documentation enhancements
	* Date fixes in TnyCamelHeader
	
	* This was a major API change in all libraries

2006-11-20  Philip Van Hoof <pvanhoof@gnome.org>

	* A new style of handling mime parts